<resources>
    <string name="app_name">Stanarko</string>
    <string name="sign_in">Sign in</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="confirm_password_register">Confirm password</string>
    <string name="name_register">Name</string>
    <string name="surname_register">Surname</string>
    <string name="phone_number_register">Phone number</string>
    <string name="blank_register_fields">All fields must be filled!</string>
    <string name="incorrect_register_password">Password incorrect!</string>
    <string name="incorrect_phone_number">Enter a phone number!</string>
    <string name="incorrect_mail_register">Invalid email address!</string>
    <string name="don_t_have_an_account_register">Don\'t have an account?</string>
    <string name="register_prompt">Register</string>
    <string name="flat_free">Free</string>
    <string name="flat_occupied">Occupied</string>
    <string name="racuni">Računi</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="rent_title">Rent bill title:</string>
    <string name="rent_main_title">Rent bill details</string>
    <string name="label_rent_tenant">Ime stanara:</string>
    <string name="label_rent_month">Month to be paid:</string>
    <string name="label_rent_year">Year to be paid:</string>
    <string name="label_rent_name">Rent name:</string>
    <string name="paid_rent">Paid rent</string>
    <string name="unpaid_rent">Unpaid rent</string>
    <string name="test_money_amount">350 €</string>
    <string name="more_info_about_rent">More info about rent</string>
    <string name="test_month">DEC</string>
    <string name="test_year_number">2022</string>
    <string name="test_person_name">John Doe</string>
    <string name="text_address_value">Street Address 123</string>
    <string name="rent_manager">Rent Manager</string>
    <string name="flat_address_label">Flat address:</string>
    <string name="month_and_year_to_be_paid_label">Month and year to be paid</string>
    <string name="tenant_name_label">Tenant name:</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="menu_log_out">Log out</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="flat_list">List of flats</string>
    <string name="button_expand">Button for expanding tenants</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="login_prompt">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="failed_registration_message">Registration failed</string>
    <string name="invalid_login_message">Invalid login</string>
    <string name="failed_to_log_out_message">Failed to log out!</string>
    <string name="menu_contracts">Contracts</string>
    <string name="owner_active_contract_fragment">Active contracts</string>
    <string name="owner_expired_contract_fragment">Expired contracts</string>
    <string name="create_new_contract_floating_button">create new contract</string>
    <string name="contract_tenant_email">Tenant email</string>
    <string name="contract_expiring_date">Expiring date</string>
    <string name="generate_new_contract_dialog">Generate new contract</string>
    <string name="contract_from_start_date">From</string>
    <string name="contract_to_end_date">to</string>
    <string name="add_flat">Add flat</string>
    <string name="button_for_deleting_flat">Button for deleting flat</string>
    <string name="menu_rents">Rents</string>
    <string name="menu_chat_with_owner">Chat with owner</string>
    <string name="menu_chat_with_tenants">Chat with tenants</string>
    <string name="message_time_10_30">10:30</string>
    <string name="chat_user_markic12">markic12</string>
    <string name="chat_message_good_morning">Good morning!</string>
    <string name="create_new_conversation_between_owner_and_tenant">Create new conversation between owner and tenant</string>
    <string name="back_button">Back button</string>
    <string name="enter_message">Enter message</string>
    <string name="send_button">Send button</string>
    <string name="tenant">Tenant</string>
    <string name="check_for_rents">Check for rents</string>
    <string name="add_moving_in_date">Add moving in date</string>
    <string name="add_tenant">Add tenant</string>
    <string name="add_new_tenant">Add new tenant</string>
    <string name="not_in_flat">Currently not in a flat</string>
    <string name="flat_from">You are in flat owned by</string>
    <string name="report_malfunction">Report a\n malfunction</string>
    <string name="malfunction_description">Malfunction description</string>
    <string name="describe_the_malfunction">Describe the malfunction</string>
    <string name="report_a_malfunction">Report a malfunction</string>
    <string name="report">Report</string>
    <string name="menu_move_out">Move out</string>
    <string name="moving_out_button_save_date">Save date</string>
    <string name="date_of_moving_out">Date of moving out:</string>
    <string name="moving_out_hint">Moving out</string>
    <string name="date_of_moving_out_doesnt_exist_message">No date of moving out</string>
    <string name="days_left_until_moving_out">Days left until moving out:</string>
    <string name="days_left_moving_out">Days left</string>
    <string name="moving_out_day_limit">Chose date that is at least 30 days from now</string>
    <string name="unable_to_generate_contract_message">Can only create contract with valid user</string>
    <string name="contract_list_tenant_hint">Tenant</string>
    <string name="contract_list_description_hint">Description</string>
    <string name="contract_list_date1_hint">Date1</string>
    <string name="contract_list_date2_hint">Date2</string>
    <string name="malfunction_notification_title">Malfunction report</string>
    <string name="malfunction_reported">A malfunction is reported</string>
    <string name="menu_home">Home</string>
    <string name="owner_contracts_title">Owner contracts</string>
    <string name="rents_title">Rents</string>
    <string name="tenant_contracts_title">Tenant contracts</string>
    <string name="moving_out_title">Moving out</string>
    <string name="add_new_flat_title">Add new flat</string>
</resources>