<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:textSize="20sp"
            android:id="@+id/contract_tenant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/contract_list_tenant_hint" />

        <TextView
            android:id="@+id/contract_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contract_list_description_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contract_from_start_date"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/contract_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/contract_list_date1_hint"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contract_to_end_date"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/contract_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/contract_list_date2_hint" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>