<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:id="@+id/fl_dialog_more_info">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:divider="#000000"
        android:showDividers="middle"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tenant_name_label"
                android:textAllCaps="true"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_rent_info_tenant_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/test_person_name"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phone_number_label"
                android:textAllCaps="true"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_rent_info_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/test_year_number"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/flat_address_label"
                android:textAllCaps="true"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_rent_info_flat_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_address_value"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/month_and_year_to_be_paid_label"
                android:textAllCaps="true"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_rent_info_month_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_address_value"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>