<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".F01_Registracija.Registracija">

  <TextView
      android:id="@+id/tv_register"
      android:text="@string/sign_up"
      android:textSize="26sp"

      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_marginTop="50dp"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintHorizontal_bias="0.5"/>

  <EditText
      android:id="@+id/et_name"
      android:layout_width="wrap_content"
      android:layout_height="50dp"

      android:layout_marginTop="30dp"
      android:ems="10"
      android:hint="@string/name_register"

      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_register" />

  <EditText
      android:id="@+id/et_surname"
      android:inputType="textPersonName"
      android:hint="@string/surname_register"

      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:ems="10"

      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_name" />

  <EditText
      android:id="@+id/et_phone_number"
      android:inputType="phone"
      android:hint="@string/phone_number_register"

      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:ems="10"

      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_surname" />

  <EditText
      android:id="@+id/et_mail"
      android:inputType="textEmailAddress"
      android:hint="@string/email_register"

      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:ems="10"

      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

  <EditText
      android:id="@+id/et_password"
      android:inputType="textPassword"
      android:hint="@string/password_register"

      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:ems="10"

      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_mail" />

  <EditText
      android:id="@+id/et_confirm_password"
      android:inputType="textPassword"
      android:hint="@string/confirm_password_register"

      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:ems="10"

      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_password" />

  <Button
      android:id="@+id/btn_register"
      android:layout_width="wrap_content"

      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"

      android:text="@string/sign_up"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

  <TextView
      android:id="@+id/login_prompt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>