<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".F02_Prijava.Prijava">

    <TextView
        android:id="@+id/tv_login"
        android:textSize="26sp"
        android:text="@string/sign_in"

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
        android:id="@+id/et_mail"
        android:inputType="textEmailAddress"
        android:hint="@string/email_login"

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"

        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/password_login"

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"

        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="Sign in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/register_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>