<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_month_year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_rent_due_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="@string/test_month" />

            <TextView
                android:id="@+id/tv_rent_due_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="@string/test_year_number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_rent_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_rent_person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:textSize="16sp"
                tools:text="@string/test_person_name" />

            <TextView
                android:id="@+id/tv_rent_person_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="23"
                android:textSize="12sp"
                tools:text="@string/text_address_value" />

            <TextView
                android:id="@+id/tv_rent_date_of_moving_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:textSize="10sp"
                tools:text="since 11th November 2022" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/tv_rent_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    tools:text="@string/test_money_amount" />

                <ImageView
                    android:id="@+id/iv_rent_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/more_info_about_rent"
                    app:srcCompat="@drawable/ic_baseline_info_24" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>