<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:elevation="10dp"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_flat_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ulica Braće Radić 8b" />

        <TextView
            android:id="@+id/tv_flat_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_flat_adress"
            tools:text="Karlovac" />

        <TextView
            android:id="@+id/tv_flat_occupied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_flat_city"
            tools:text="Occupied" />

        <TextView
            android:id="@+id/tv_flat_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_flat_occupied"
            tools:text="250" />

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/button_for_deleting_flat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_flat_occupied"
            app:srcCompat="@drawable/ic_delete_flat_icon" />

        <ImageButton
            android:id="@+id/ib_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/button_expand"
            app:layout_constraintBottom_toTopOf="@+id/rv_tenant_list"
            app:layout_constraintEnd_toStartOf="@+id/ib_add_tenant"
            app:layout_constraintTop_toBottomOf="@id/ib_delete"
            app:srcCompat="@drawable/ic_baseline_expand_more_24" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tenant_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_expand" />

        <ImageButton
            android:contentDescription="@string/add_tenant"
            android:id="@+id/ib_add_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_delete"
            app:srcCompat="@drawable/ic_baseline_add_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>